<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D6D6D6"
    android:orientation="vertical"
    tools:context=".UserProfileActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="45dp">

            <ImageView
                android:id="@+id/imageView_back_general"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/todoProfile"
                android:onClick="voltarUserProfile"
                android:padding="15dp"
                android:src="@drawable/baseline_arrow_back_24"
                tools:ignore="UsingOnClickInXml,DuplicateSpeakableTextCheck" />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:background="#0764C8"
            android:padding="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/image_profile"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/todoProfile2"
                    android:onClick="mudarFoto"
                    android:scaleType="fitXY"
                    android:src="@drawable/ic_img_profile" />

                <TextView
                    android:id="@+id/textView_NomeProfile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center_horizontal"
                    android:includeFontPadding="false"
                    android:text="@string/nome_do_usu_rio"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp" />
            </LinearLayout>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="16dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/editText_nome"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="10dp"
                android:hint="@string/nome"
                android:textColorHint="@color/black"
                app:boxCollapsedPaddingTop="0dp"
                app:hintEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextNome"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/white_border"
                    android:drawableStart="@drawable/baseline_person_24"
                    android:drawablePadding="10dp"
                    android:gravity="bottom"
                    android:hint="@string/nome"
                    android:inputType="textPersonName"
                    android:maxLength="40"
                    android:paddingStart="10dp"
                    android:paddingTop="15dp"
                    android:text="@string/nome1"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    tools:ignore="TextContrastCheck,TouchTargetSizeCheck" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/editText_email"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginTop="15dp"
                android:gravity="center_vertical"
                android:hint="@string/e_mail"
                android:textColorHint="@color/black"
                app:boxCollapsedPaddingTop="3dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextEmail"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/white_border"
                    android:drawableStart="@drawable/baseline_email_24"
                    android:drawablePadding="10dp"
                    android:gravity="bottom"
                    android:inputType="textEmailAddress"
                    android:maxLength="35"
                    android:paddingStart="10dp"
                    android:paddingTop="15dp"
                    android:text="@string/email"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    tools:ignore="TextContrastCheck,TextContrastCheck,TouchTargetSizeCheck" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/button_atualizar"
                style="@style/NoTintButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/rounded_azul"
                android:backgroundTint="@color/bluetheme"
                android:gravity="center_horizontal|center_vertical"
                android:onClick="update"
                android:text="@string/atualizar_dados"
                android:textColor="#fff"
                android:textSize="18sp"
                tools:ignore="TextContrastCheck,UsingOnClickInXml" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/editText_senha"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginTop="30dp"
                android:gravity="center_vertical"
                android:hint="@string/senha"
                android:textColorHint="@color/black"
                app:boxCollapsedPaddingTop="3dp"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="#0764C8">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextSenha"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/white_border"
                    android:drawableStart="@drawable/baseline_password_24"
                    android:drawablePadding="10dp"
                    android:gravity="bottom"
                    android:inputType="number|numberPassword"
                    android:maxLength="16"
                    android:paddingStart="10dp"
                    android:paddingTop="15dp"
                    android:text="@string/senhaProfile"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    tools:ignore="TextContrastCheck,TouchTargetSizeCheck" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/button_atualizar2"
                style="@style/NoTintButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/rounded_azul"
                android:backgroundTint="@color/bluetheme"
                android:gravity="center"
                android:onClick="updateSenha"
                android:text="@string/atualizar_senha"
                android:textColor="#fff"
                android:textColorHint="#F6F0F2"
                android:textSize="18sp"
                tools:ignore="TextContrastCheck,UsingOnClickInXml" />

            <Button
                android:id="@+id/button_apagar"
                style="@style/NoTintButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:background="@drawable/rounded_azul"
                android:backgroundTint="#FF0000"
                android:gravity="center"
                android:onClick="delete"
                android:text="@string/apagar_conta"
                android:textColor="#fff"
                android:textSize="18sp"
                tools:ignore="TextContrastCheck,UsingOnClickInXml" />

        </LinearLayout>

    </LinearLayout>
</ScrollView>