<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:layout_marginBottom="25dp"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="wrap_content"
                    android:layout_height="25dp"
                    android:layout_marginEnd="5dp"
                    android:minHeight="48dp"
                    android:text="ID:"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/textViewId"
                    android:layout_width="wrap_content"
                    android:layout_height="25dp"
                    android:minHeight="48dp"
                    android:text="@string/identificador_do_item"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="20sp" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/image_item"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/todoProfile2"
                android:onClick="mudarFoto"
                android:scaleType="fitXY"
                android:src="@drawable/baseline_image_24" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textViewEANome"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/nome_do_item"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="24sp" />

                    <EditText
                        android:id="@+id/editTextNomeItem"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:autofillHints=""
                        android:ems="10"
                        android:hint="@string/exemplo_ovo"
                        android:inputType="textPersonName"
                        android:textColor="@color/black"
                        android:textColorHint="#757575"
                        android:textStyle="italic"
                        tools:ignore="TouchTargetSizeCheck" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textViewEAMarca"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/marca"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="24sp" />

                    <EditText
                        android:id="@+id/editTextMarca"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:autofillHints=""
                        android:ems="10"
                        android:hint="@string/exemplo_omo"
                        android:inputType="textPersonName"
                        android:textColor="@color/black"
                        android:textColorHint="#757575"
                        android:textStyle="italic"
                        tools:ignore="TouchTargetSizeCheck" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textViewEAPreco"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pre_o_r"
                        android:textColor="@color/black"
                        android:textSize="24sp" />

                    <EditText
                        android:id="@+id/editTextPreco"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:autofillHints=""
                        android:ems="10"
                        android:hint="@string/xx_xx"
                        android:inputType="numberDecimal"
                        android:textColor="@color/black"
                        android:textColorHint="#757575"
                        android:textStyle="italic"
                        tools:ignore="TouchTargetSizeCheck" />

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="R$"
                        android:textColor="@color/black"
                        android:textSize="20sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textViewEAQuantidade"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/quantidade"
                        android:textColor="@color/black"
                        android:textSize="24sp" />

                    <EditText
                        android:id="@+id/editTextQuantidade"
                        android:layout_width="115dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:autofillHints=""
                        android:ems="10"
                        android:hint="@string/exemplo_10"
                        android:inputType="number"
                        android:textColor="@color/black"
                        android:textColorHint="#757575"
                        android:textStyle="italic"
                        tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textViewEADesconto"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Desconto (%):"
                        android:textColor="@color/black"
                        android:textSize="24sp" />

                    <EditText
                        android:id="@+id/editTextDesconto"
                        android:layout_width="115dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:autofillHints=""
                        android:ems="10"
                        android:hint="Exemplo: 25"
                        android:inputType="number"
                        android:textColor="@color/black"
                        android:textColorHint="#757575"
                        android:textStyle="italic"
                        tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="%"
                        android:textColor="@color/black"
                        android:textSize="20sp" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textViewEATotal"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:text="@string/total"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="24sp" />

                    <TextView
                        android:id="@+id/textViewTotalValor"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Valor"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/textView10"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_weight="1"
                        android:text="R$"
                        android:textColor="@color/black" />

                    <Button
                        android:id="@+id/btn_calcular"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="22dp"
                        android:layout_weight="1"
                        android:backgroundTint="#CF9B00"
                        android:onClick="calcular"
                        android:text="Calcular"
                        android:textColor="@color/white" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_add_tela2"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:backgroundTint="#4FBC0B"
                    android:onClick="adicionar"
                    android:text="@string/adicionar"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/btn_edit_tela2"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:backgroundTint="#0E26AA"
                    android:onClick="atualizar"
                    android:text="Atualizar"
                    android:textColor="@color/white" />

            </LinearLayout>

            <Button
                android:id="@+id/btn_apagar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#000000"
                android:onClick="apagar"
                android:text="Remover item da lista"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/btn_cancelar"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:backgroundTint="#E81515"
                android:onClick="cancelar"
                android:text="@string/cancelar"
                android:textColor="@color/white" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>
